Configured and Created Database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=AddressBookMVC_DB;User Id=AddressBookMVC_USR;Password=JWjeg8ZnHQRGxw5VRX9Xx6Qm"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
